package slaughterhouse.domain;

import java.time.LocalDateTime;
import java.util.UUID;

public class Animal
{
  private UUID animalId;
  private Species species;
  private double liveWeightKg;
  private LocalDateTime registeredAt;


}
