package slaughterhouse.domain;

public class PartType
{
  private Species species;
  private int countPerAnimal;
  private String name;
  private int code;
}
