package slaughterhouse.domain;

public class ProductType
{
  private int code;
  private String name;
  private String kind;
}
